--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -8,62 +8,20 @@
 
     <TextView
             android:text="title"
-            android:layout_width="300dp"
-            android:layout_height="40dp" android:id="@+id/title"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="261dp"
+            android:layout_height="30dp" android:id="@+id/title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.144"
             app:layout_constraintTop_toTopOf="parent"
             android:maxLines="2"
             android:ellipsize="end"
-            android:layout_marginTop="16dp" android:textSize="16sp" android:textStyle="bold"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
-            android:id="@+id/imageButton"
-            android:background="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/title"
-            app:layout_constraintHorizontal_bias="0.19" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.235"/>
-    <TextView
-            android:text="count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/reaction"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageButton"
-            app:layout_constraintHorizontal_bias="0.25" app:layout_constraintVertical_bias="0.296"/>
-    <TextView
-            android:text="태그"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView5"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginStart="16dp"
-            app:layout_constraintVertical_bias="0.533"/>
-    <TextView
-            android:text="tag1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tag1"
-            app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/title"
-            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.3"/>
-    <TextView
-            android:text="tag2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tag2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintVertical_bias="0.3" app:layout_constraintStart_toEndOf="@+id/tag1"
-            android:layout_marginStart="40dp"/>
-    <TextView
-            android:text="tag3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tag3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/tag2" android:layout_marginStart="28dp"/>
+            android:layout_marginTop="24dp" android:textSize="16sp" android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintHorizontal_bias="1.0"/>
+    <ImageView
+            android:layout_width="98dp"
+            android:layout_height="84dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.0"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
